# rust-template

./: Cargo.toml  README.md  README.md.liquid  config.example.json  config.example.json5
.cargo/: config.toml
.github/workflows/: ci.yml  nightly.yml  scheduled.yml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  settings.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  settings.rs
crates/entrypoint/: Cargo.toml
crates/entrypoint/src/: main.rs  settings.rs
