[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.14.1", default-features = false, features = ["json"] }
console-subscriber = "0.4.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
    "fs",
] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
