[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.94"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
    "fs",
] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
