[package]
name = "entrypoint"
version = "0.0.0"
publish = false
license = "MIT"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
console-subscriber = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
app = { path = "../app" }
