[package]
name = "entrypoint"
version = "0.0.0"
publish = false
license = "MIT"
edition = "2021"
rust-version = "1.78.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

app = { path = "../app" }

clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.14.1", default-features = false, features = ["json5"] }
console-subscriber = "0.4.1"
